tests/compiler/errors/global_in_lambda.casa
# expect: INVALID_SCOPE
0 = X

fn foo {
    { global X
    1 = X } exec
}

foo
